extend autocomplete search - fix z-index
git-svn-id: https://svn.modified-shop.org/svn/modified-shop/trunk@12365 79ac0487-9261-4f26-a34d-858dee0dcce0

--- a/templates/tpl_modified/stylesheet.css
+++ b/templates/tpl_modified/stylesheet.css
@@ -350,7 +350,7 @@ ul.topnavigation li a:hover {
 }
 .search_inner .search_cat {
   position:relative;
-  z-index: 100000;
+  z-index: 1200;
   width:80px;
 }
 .search_inner .search_cat select {
@@ -4032,7 +4032,7 @@ ul.resp-tabs-list{
   background-color:#f1f1f1;
   border:1px solid #ccc;
   color:#333;
-  z-index:99999;
+  z-index:1100;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
